Enhance BHOCommand and GeyserSessionReflection with new commands and improved logging
- Added 'pipeline' and 'repatch' commands to BHOCommand for better player management.
- Updated info messages to include reflection status and player registration counts.
- Improved GeyserSessionReflection to patch both BedrockDimension and ChunkCache heights.
- Enhanced ChunkTranslator to provide better logging and buffer management during chunk translation.
- Introduced packet counters in BedrockPacketInterceptor for diagnostics.