@@ -4,6 +4,10 @@ import fr.buildtheearth.bedrockheightoffset.BedrockHeightOffset;
 import fr.buildtheearth.bedrockheightoffset.core.OffsetRegistry;
 import fr.buildtheearth.bedrockheightoffset.core.PlayerOffsetData;
 import fr.buildtheearth.bedrockheightoffset.geyser.GeyserHook;
+import fr.buildtheearth.bedrockheightoffset.geyser.GeyserSessionReflection;
+import fr.buildtheearth.bedrockheightoffset.netty.BedrockPacketInterceptor;
+import io.netty.channel.Channel;
+import io.netty.channel.ChannelPipeline;
 import org.bukkit.Bukkit;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
@@ -16,6 +20,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
+import java.util.UUID;
 
 public class BHOCommand implements CommandExecutor, TabCompleter {
 
@@ -35,26 +40,29 @@ public class BHOCommand implements CommandExecutor, TabCompleter {
         if (!s.hasPermission("bho.admin")) { s.sendMessage(P + "§cPermission denied."); return true; }
         if (args.length == 0) { sendHelp(s); return true; }
         switch (args[0].toLowerCase()) {
-            case "info"   -> info(s);
-            case "offset" -> offset(s, args);
-            case "list"   -> list(s);
-            case "reload" -> reload(s);
-            case "debug"  -> debug(s);
-            default       -> sendHelp(s);
+            case "info"     -> info(s);
+            case "offset"   -> offset(s, args);
+            case "list"     -> list(s);
+            case "reload"   -> reload(s);
+            case "debug"    -> debug(s);
+            case "pipeline" -> pipeline(s, args);
+            case "repatch"  -> repatch(s, args);
+            default         -> sendHelp(s);
         }
         return true;
     }
 
     private void info(CommandSender s) {
-        s.sendMessage(P + "§6══ BedrockHeightOffset v" + plugin.getPluginMeta().getVersion() + " ══");
-        s.sendMessage("  §7Registered players: §f" + registry.size());
-        s.sendMessage("  §7Java world: §f" + plugin.getPluginConfig().getJavaMinY()
+        s.sendMessage(P + "§6══ BedrockHeightOffset v2.2.0 ══");
+        s.sendMessage("  §7Players: §f"       + registry.size());
+        s.sendMessage("  §7Java world: §f"    + plugin.getPluginConfig().getJavaMinY()
             + " → " + plugin.getPluginConfig().getJavaMaxY());
         s.sendMessage("  §7Bedrock window: §f-64 → 320");
         s.sendMessage("  §7Triggers: §fupper=" + plugin.getPluginConfig().getUpperTrigger()
             + " lower=" + plugin.getPluginConfig().getLowerTrigger());
-        s.sendMessage("  §7Floodgate: §f" + GeyserHook.isFloodgateAvailable());
-        s.sendMessage("  §7Debug: §f" + plugin.getPluginConfig().isDebug());
+        s.sendMessage("  §7Floodgate: §f"     + GeyserHook.isFloodgateAvailable());
+        s.sendMessage("  §7Reflection: §f"    + GeyserSessionReflection.isReady());
+        s.sendMessage("  §7Debug: §f"         + plugin.getPluginConfig().isDebug());
     }
 
     private void offset(CommandSender s, String[] args) {
@@ -64,27 +72,26 @@ public class BHOCommand implements CommandExecutor, TabCompleter {
         PlayerOffsetData d = registry.get(t.getUniqueId());
         if (d == null) { s.sendMessage(P + "§eNot registered."); return; }
         s.sendMessage(P + "§6══ " + t.getName() + " ══");
-        s.sendMessage("  §7Type: "       + (d.isBedrockPlayer() ? "§aBEDROCK" : "§9JAVA"));
-        s.sendMessage("  §7Offset: §f"   + d.getOffset() + " blocks (" + (d.getOffset() >> 4) + " sections)");
-        s.sendMessage("  §7Java Y: §f"   + String.format("%.2f", d.getLastJavaY()));
-        s.sendMessage("  §7Bedrock Y: §f"+ String.format("%.2f", d.toBedrockY(d.getLastJavaY())));
-        s.sendMessage("  §7Changes: §f"  + d.getOffsetChangeCount());
+        s.sendMessage("  §7Type: "        + (d.isBedrockPlayer() ? "§aBEDROCK" : "§9JAVA"));
+        s.sendMessage("  §7Offset: §f"    + d.getOffset() + " blocks (" + d.offsetSections() + " sections)");
+        s.sendMessage("  §7Java Y: §f"    + String.format("%.2f", d.getLastJavaY()));
+        s.sendMessage("  §7Bedrock Y: §f" + String.format("%.2f", d.toBedrockY(d.getLastJavaY())));
+        s.sendMessage("  §7Changes: §f"   + d.getOffsetChangeCount());
     }
 
     private void list(CommandSender s) {
         Collection<PlayerOffsetData> all = registry.all();
-        if (all.isEmpty()) { s.sendMessage(P + "§eNo players registered."); return; }
+        if (all.isEmpty()) { s.sendMessage(P + "§eNone."); return; }
         s.sendMessage(P + "§6══ Players (" + all.size() + ") ══");
-        for (PlayerOffsetData d : all) {
+        for (PlayerOffsetData d : all)
             s.sendMessage(String.format("  %s §f%s §7off=%d jY=%.0f bY=%.0f",
                 d.isBedrockPlayer() ? "§a[BE]" : "§9[JE]",
                 d.getName(), d.getOffset(), d.getLastJavaY(), d.toBedrockY(d.getLastJavaY())));
-        }
     }
 
     private void reload(CommandSender s) {
         plugin.getPluginConfig().reload();
-        s.sendMessage(P + "§aConfig reloaded.");
+        s.sendMessage(P + "§aReloaded.");
     }
 
     private void debug(CommandSender s) {
@@ -95,15 +102,45 @@ public class BHOCommand implements CommandExecutor, TabCompleter {
         s.sendMessage(P + "Debug: " + (!cur ? "§aON" : "§cOFF"));
     }
 
+    /** /bho pipeline <player> — shows the Netty pipeline of a Bedrock player */
+    private void pipeline(CommandSender s, String[] args) {
+        if (args.length < 2) { s.sendMessage(P + "§cUsage: /bho pipeline <player>"); return; }
+        Player t = Bukkit.getPlayer(args[1]);
+        if (t == null) { s.sendMessage(P + "§cPlayer not found."); return; }
+
+        Channel ch = GeyserSessionReflection.getBedrockChannel(t.getUniqueId());
+        if (ch == null) { s.sendMessage(P + "§cCannot get channel (not Bedrock?)."); return; }
+
+        ChannelPipeline pipeline = ch.pipeline();
+        s.sendMessage(P + "§6Pipeline for " + t.getName() + ":");
+        int i = 0;
+        for (String name : pipeline.names()) {
+            boolean isBHO = name.equals(BedrockPacketInterceptor.HANDLER_NAME);
+            s.sendMessage("  §7" + (++i) + ". " + (isBHO ? "§a" : "§f") + name);
+        }
+    }
+
+    /** /bho repatch <player> — forces dimension + chunkcache repatch */
+    private void repatch(CommandSender s, String[] args) {
+        if (args.length < 2) { s.sendMessage(P + "§cUsage: /bho repatch <player>"); return; }
+        Player t = Bukkit.getPlayer(args[1]);
+        if (t == null) { s.sendMessage(P + "§cPlayer not found."); return; }
+
+        GeyserSessionReflection.patchSessionDimension(t.getUniqueId());
+        s.sendMessage(P + "§aRepatch applied for " + t.getName()
+            + ". Check console for details.");
+    }
+
     private void sendHelp(CommandSender s) {
-        s.sendMessage(P + "§6/bho info §7| §6offset <p> §7| §6list §7| §6reload §7| §6debug");
+        s.sendMessage(P + "§6/bho §7info | offset <p> | list | reload | debug | pipeline <p> | repatch <p>");
     }
 
     @Override
     public List<String> onTabComplete(@NotNull CommandSender s, @NotNull Command c,
                                       @NotNull String l, @NotNull String[] args) {
-        if (args.length == 1) return filter(Arrays.asList("info","offset","list","reload","debug"), args[0]);
-        if (args.length == 2 && args[0].equalsIgnoreCase("offset")) {
+        if (args.length == 1)
+            return filter(Arrays.asList("info","offset","list","reload","debug","pipeline","repatch"), args[0]);
+        if (args.length == 2 && List.of("offset","pipeline","repatch").contains(args[0].toLowerCase())) {
             List<String> n = new ArrayList<>();
             Bukkit.getOnlinePlayers().forEach(p -> n.add(p.getName()));
             return filter(n, args[1]);
@@ -112,6 +149,6 @@ public class BHOCommand implements CommandExecutor, TabCompleter {
     }
 
     private List<String> filter(List<String> l, String p) {
-        return l.stream().filter(s -> s.toLowerCase().startsWith(p.toLowerCase())).toList();
+        return l.stream().filter(x -> x.toLowerCase().startsWith(p.toLowerCase())).toList();
     }
 }
