@@ -9,49 +9,24 @@ import java.lang.reflect.Method;
 import java.util.UUID;
 import java.util.logging.Logger;
 
-/**
- * Reflection bridge into Geyser internals.
- *
- * Key insight for the Y=1952 target:
- *
- * JavaLevelChunkWithLightTranslator computes per-packet:
- *   BedrockDimension dim = session.getBedrockDimension();
- *   int maxBedrockSectionY = (dim.height() >> 4) - 1;
- *   if (bedrockSectionY > maxBedrockSectionY) continue; // section dropped!
- *
- * session.getBedrockDimension() returns session.bedrockDimension, which
- * points to the same object as session.bedrockOverworldDimension (for
- * overworld players).
- *
- * Both fields point to the SAME BedrockDimension instance.
- * We mutate that instance's 'height' field directly (it's a primitive int
- * stored in a final field — accessible via setAccessible on JDK 21 with
- * Paper's module opens).
- *
- * We set height = 2048 (covers Y=-64 to Y=1984).
- * This makes maxBedrockSectionY = (2048 >> 4) - 1 = 127.
- * Java section at Y=1952 → sectionY = (1952+64)/16 = 126 ≤ 127 ✓
- *
- * We do NOT replace the object reference (no Unsafe needed).
- * We mutate the object in-place via setAccessible(true) on the field.
- * On Paper 1.21.x with JDK 21, this works because Paper adds
- * --add-opens for internal modules.
- */
 public class GeyserSessionReflection {
 
     private static final Logger LOG = Logger.getLogger("BedrockHeightOffset");
 
-    private static Field  upstreamField       = null;
-    private static Field  bedrockSessionField = null;
-    private static Field  bedrockDimField     = null;  // session.bedrockDimension
-    private static Field  overworldDimField   = null;  // session.bedrockOverworldDimension
-    private static Field  dimHeightField      = null;  // BedrockDimension.height
-    private static Field  dimMinYField        = null;  // BedrockDimension.minY
-    private static Field  dimWarnField        = null;  // BedrockDimension.doUpperHeightWarn
-    private static Method getPeerMethod       = null;
-    private static Method getChannelMethod    = null;
+    private static Field  upstreamField        = null;
+    private static Field  bedrockSessionField  = null;
+    private static Field  bedrockDimField      = null;
+    private static Field  overworldDimField    = null;
+    private static Field  dimHeightField       = null;
+    private static Field  dimMinYField         = null;
+    private static Field  dimWarnField         = null;
+    private static Field  chunkCacheField      = null;
+    private static Field  chunkHeightYField    = null;
+    private static Field  chunkMinYField       = null;
+    private static Method getPeerMethod        = null;
+    private static Method getChannelMethod     = null;
 
-    private static boolean ready              = false;
+    private static boolean ready               = false;
 
     public static void initialize() {
         try {
@@ -60,6 +35,7 @@ public class GeyserSessionReflection {
             Class<?> bedrockSession  = Class.forName("org.cloudburstmc.protocol.bedrock.BedrockServerSession");
             Class<?> bedrockPeer     = Class.forName("org.cloudburstmc.protocol.bedrock.BedrockPeer");
             Class<?> bedrockDim      = Class.forName("org.geysermc.geyser.level.BedrockDimension");
+            Class<?> chunkCache      = Class.forName("org.geysermc.geyser.session.cache.ChunkCache");
 
             upstreamField = geyserSession.getDeclaredField("upstream");
             upstreamField.setAccessible(true);
@@ -73,7 +49,6 @@ public class GeyserSessionReflection {
             overworldDimField = geyserSession.getDeclaredField("bedrockOverworldDimension");
             overworldDimField.setAccessible(true);
 
-            // Mutate BedrockDimension's primitive fields directly
             dimHeightField = bedrockDim.getDeclaredField("height");
             dimHeightField.setAccessible(true);
 
@@ -83,6 +58,16 @@ public class GeyserSessionReflection {
             dimWarnField = bedrockDim.getDeclaredField("doUpperHeightWarn");
             dimWarnField.setAccessible(true);
 
+            chunkCacheField = geyserSession.getDeclaredField("chunkCache");
+            chunkCacheField.setAccessible(true);
+
+            // ChunkCache stores chunkHeightY and chunkMinY
+            chunkHeightYField = chunkCache.getDeclaredField("chunkHeightY");
+            chunkHeightYField.setAccessible(true);
+
+            chunkMinYField = chunkCache.getDeclaredField("chunkMinY");
+            chunkMinYField.setAccessible(true);
+
             getPeerMethod = bedrockSession.getMethod("getPeer");
             getPeerMethod.setAccessible(true);
 
@@ -90,7 +75,7 @@ public class GeyserSessionReflection {
             getChannelMethod.setAccessible(true);
 
             ready = true;
-            LOG.info("[BHO] GeyserSessionReflection initialized — ready to patch sessions");
+            LOG.info("[BHO] GeyserSessionReflection initialized");
 
         } catch (Exception e) {
             LOG.severe("[BHO] GeyserSessionReflection FAILED: " + e.getMessage());
@@ -99,61 +84,66 @@ public class GeyserSessionReflection {
     }
 
     /**
-     * Mutates the BedrockDimension instance(s) held by the GeyserSession
-     * in-place, setting height=2048 so that chunk sections up to Y=1984
-     * are no longer discarded by JavaLevelChunkWithLightTranslator.
+     * Patches both the BedrockDimension height AND the ChunkCache height
+     * for a specific session.
      *
-     * Math:
-     *   height = 2048
-     *   maxBedrockSectionY = (2048 >> 4) - 1 = 127
-     *   Java section for Y=1952: index = (1952 - (-64)) / 16 = 126 ≤ 127 ✓
-     *   Java section for Y=1984: index = (1984 - (-64)) / 16 = 128 > 127 ✗ (just over, fine)
+     * ChunkCache.chunkHeightY is used directly in JavaLevelChunkWithLightTranslator:
+     *   int chunkSize = session.getChunkCache().getChunkHeightY();
+     *   DataPalette[] javaChunks = new DataPalette[chunkSize];
+     *   for (int sectionY = 0; sectionY < chunkSize; sectionY++) { ... }
      *
-     * We also set doUpperHeightWarn=false to suppress the console warning.
+     * If chunkHeightY is capped (e.g. at 36 for 576 blocks), sections above
+     * Y=512 are never even iterated. We must set it to the real Java world height.
      *
-     * This must be called AFTER Geyser's connect() has run (tick ≥ 2).
-     * connect() assigns bedrockOverworldDimension via:
-     *   this.bedrockOverworldDimension = new BedrockDimension(minY, maxY-minY, true, OVERWORLD_ID);
-     * So we patch the newly created instance right after.
+     * terraplusminus: minY=-64, height=2016 (Y=-64 to Y=1952)
+     *   chunkHeightY = 2016 / 16 = 126 sections
+     *   chunkMinY    = -64 / 16  = -4  sections
      */
     public static void patchSessionDimension(UUID javaUuid) {
-        if (!ready) {
-            LOG.warning("[BHO] patchSessionDimension called before init for " + javaUuid);
-            return;
-        }
+        if (!ready) return;
         try {
             GeyserConnection conn = GeyserApi.api().connectionByUuid(javaUuid);
-            if (conn == null) {
-                LOG.warning("[BHO] patchSessionDimension: no connection for " + javaUuid);
-                return;
-            }
-
-            // Patch bedrockOverworldDimension
+            if (conn == null) return;
+            
             Object overworldDim = overworldDimField.get(conn);
             if (overworldDim != null) {
-                int oldHeight = (int) dimHeightField.get(overworldDim);
-                if (oldHeight < 2048) {
+                int oldH = (int) dimHeightField.get(overworldDim);
+                if (oldH < 2048) {
                     dimHeightField.set(overworldDim, 2048);
                     dimMinYField.set(overworldDim, -64);
                     dimWarnField.set(overworldDim, false);
-                    LOG.info("[BHO] overworldDim patched for " + javaUuid
-                        + " | height " + oldHeight + " → 2048"
-                        + " | covers Y=-64 to Y=" + (-64 + 2048));
-                } else {
-                    LOG.fine("[BHO] overworldDim already height=" + oldHeight + " for " + javaUuid);
+                    LOG.info("[BHO] overworldDim patched | height " + oldH + "→2048 | " + javaUuid);
                 }
             }
 
-            // Patch bedrockDimension — may be the same object or a different one
             Object currentDim = bedrockDimField.get(conn);
             if (currentDim != null && currentDim != overworldDim) {
-                int oldHeight = (int) dimHeightField.get(currentDim);
-                if (oldHeight < 2048) {
+                int oldH = (int) dimHeightField.get(currentDim);
+                if (oldH < 2048) {
                     dimHeightField.set(currentDim, 2048);
                     dimMinYField.set(currentDim, -64);
                     dimWarnField.set(currentDim, false);
-                    LOG.info("[BHO] bedrockDim (separate obj) patched for " + javaUuid
-                        + " | height " + oldHeight + " → 2048");
+                    LOG.info("[BHO] bedrockDim (separate) patched | height " + oldH + "→2048 | " + javaUuid);
+                }
+            }
+
+            Object chunkCache = chunkCacheField.get(conn);
+            if (chunkCache != null) {
+                int oldHeight = (int) chunkHeightYField.get(chunkCache);
+                int oldMinY   = (int) chunkMinYField.get(chunkCache);
+
+                // terraplusminus: minY=-64, total height=2016 → 126 sections
+                // We use 128 sections (2048 blocks) to have a safe margin
+                int targetHeight = 128; // sections
+                int targetMinY   = -4;  // sections (= -64 blocks / 16)
+
+                if (oldHeight != targetHeight) {
+                    chunkHeightYField.set(chunkCache, targetHeight);
+                    chunkMinYField.set(chunkCache, targetMinY);
+                    LOG.info(String.format(
+                        "[BHO] ChunkCache patched | heightY %d→%d | minY %d→%d | %s",
+                        oldHeight, targetHeight, oldMinY, targetMinY, javaUuid
+                    ));
                 }
             }
 
@@ -175,7 +165,7 @@ public class GeyserSessionReflection {
             return (Channel) getChannelMethod.invoke(peer);
 
         } catch (Exception e) {
-            LOG.warning("[BHO] getBedrockChannel failed for " + javaUuid + ": " + e.getMessage());
+            LOG.warning("[BHO] getBedrockChannel failed: " + e.getMessage());
             return null;
         }
     }
